# a

./: .gitignore  Cargo.toml  LICENSE  PLANNING.md  README.md  REFERENCE.md  a_new  build.sh  fibonacci  grammar.ebnf  test_async_bin
bootstrap/: build.sh  cli.c
c_runtime/: VENDORS.md  embedded.c  gguf.c  runtime.c  runtime.h
plans/: AUTONOMOUS-SETUP.md  GOALS.md  PLAN-v0.00-language-design.md  PLAN-v0.28-self-hosted-compiler-frontend.md  PLAN-v0.29-self-hosted-compiler-backend.md  PLAN-v0.30-serialization.md  PLAN-v0.31-bootstrap.md  PLAN-v0.32-eval-builtin.md  PLAN-v0.33-raw-strings-regex.md  PLAN-v0.34-syntax-highlighting.md  PLAN-v0.35-language-reference.md  PLAN-v0.36-module-precompilation.md  PLAN-v0.37-ast-emitter.md  PLAN-v0.38-meta-toolkit-v1.md  PLAN-v0.38-meta-toolkit-v2.md  PLAN-v0.39-structured-concurrency.md  PLAN-v0.40.md  PLAN-v0.41.md  PLAN-v0.42.md  PLAN-v0.43.md  PLAN-v0.44.md  PLAN-v0.45.md  PLAN-v0.47.1.md  PLAN-v0.47.2.md  PLAN-v0.47.3.md  PLAN-v0.47.4.md  PLAN-v0.47.5.md  PLAN-v0.47.6.md  PLAN-v0.xx-first-class-maps.md  PLAN-v0.xx-pattern-matching.md  PLAN-v0.xx-stack-traces.md  PLAN-v0.xx-tail-call-optimization.md  PLAN-v0.xx-vm-closures.md  PLAN-v0.xx-vm-performance.md  ROADMAP-v0.43-to-v0.52.md  ROADMAP-v0.51-to-v1.0.md  ROADMAP-v0.57-to-v1.0.md  ROADMAP-v1.1-to-v2.0.md  ROADMAP-v2.1.0.md  llm_self-improvement_agent_f136ae15.plan.md  (+27 more)
scripts/: embed.py  native_test.sh  test_memory.sh  vendor_check.sh
src/: ast.rs  bridge.rs  builtins.rs  checker.rs  compiler.rs  errors.rs  formatter.rs  interpreter.rs  lexer.rs  parser.rs  tokens.rs  vm.rs
(+18 files in other folders)
